--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,7 +43,10 @@ $colors: (
   twitter:    #1da1f4,
   google:     #dc4a38,
   vimeo:      #23b6ea,
-  facebook:   #3b5998
+  facebook:   #3b5998,
+  columbusRed:  #fd7272,
+  columbusGrey: #2a2a2a,
+  columbusWhite:  #fff
 );
 
 
@@ -58,7 +61,7 @@ $colors: (
 // Material Design only Sass variables can go here
 
 // Use the primary color as the background for the toolbar-md-background
-$toolbar-md-background:                   color($colors, primary);
+$toolbar-md-background:                   color($colors, columbusRed);
 
 // Change the color of the segment button text
 $toolbar-md-active-color:                 #fff;
