--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -60,11 +60,11 @@ $colors: (
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-// Use the primary color as the background for the toolbar-md-background
+// Use the columbusRed color as the background for the toolbar-md-background
 $toolbar-md-background:                   color($colors, columbusRed);
 
 // Change the color of the segment button text
-$toolbar-md-active-color:                 #fff;
+$toolbar-md-active-color:                 columbusGrey;
 
 
 // App Windows Variables
