add rating component

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -18,3 +18,17 @@ page-profile {
 .speaker-detail p {
   color: #60646B;
 }
+
+ul {
+  padding: 0px;
+ 
+  &.rating li {
+    padding: 5px 10px !important;
+    background: none;
+    color: #ffb400;
+ 
+    ion-icon {
+      font-size: 30px;
+    }
+  }
+}
