--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -3,7 +3,8 @@ page-homepage {
   #floating-panel {
     position: absolute;
     top: 1px;
-    right: 5px;
+    left:15%;
+    right:15%;
     z-index: 5;
     background-color: transparent;
     //padding: 0px;
@@ -11,6 +12,14 @@ page-homepage {
     text-align: center;
     line-height: 30px;
     padding-left: 10px;
+  }
+  .floatButton{
+    position: absolute;
+    z-index: 5;
+    bottom: 120px;
+    right: 0px;
+
+    //right: 20%;
   }
   agm-map {
     height: 100%;
