--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -77,11 +77,11 @@
 
       <ion-list>
         <ion-list-header>
-          Tutorial
+          Know More
         </ion-list-header>
         <button ion-item menuClose (click)="openTutorial()">
           <ion-icon item-start name="hammer"></ion-icon>
-          Show Tutorial
+          Using Columbus
         </button>
       </ion-list>
 
