integrating source location

--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -24,6 +24,12 @@ page-homepage {
   agm-map {
     height: 100%;
   }
+
+  .searchBars{
+    background-color:#ffffff;
+    padding: 0px;
+  }
+
 }
 
 
