updated search bar

--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -27,7 +27,14 @@ page-homepage {
 
   .searchBars{
     background-color:#ffffff;
-    padding: 0px;
+    padding-left: 10%;
+    margin: 0px;
+  }
+
+  .searchBtn{
+    margin-left: -60px;
+    margin-top: 5px;
+
   }
 
 }
