--- a/src/pages/alltrips/alltrips.scss
+++ b/src/pages/alltrips/alltrips.scss
@@ -1,3 +1,17 @@
 page-alltrips {
 
+  ul {
+    padding: 0px;
+
+    &.rating li {
+      padding: 0px !important;
+      background: none;
+      color: #ffb400;
+
+      ion-icon {
+        font-size: 15px;
+      }
+    }
+  }
+
 }
