--- a/src/pages/alltrips/alltrips.scss
+++ b/src/pages/alltrips/alltrips.scss
@@ -13,5 +13,35 @@ page-alltrips {
       }
     }
   }
+  .speaker-card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    ion-card-content {
+      flex: 1 2 auto;
+    }
+  }
+  @media(min-width: 769px) {
+    .speaker-card {
+      height: 370px;
+    }
+  }
+
+  .speaker-card ion-card-header .item {
+    padding: 4px 16px;
+  }
+
+  .speaker-card ion-card-content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .searchList{
+    padding: 5%;
+  }
+  .hide {
+    visibility: hidden;
+  }
 
 }
