--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -2,16 +2,17 @@ page-homepage {
 
   #floating-panel {
     position: absolute;
+    width:100%;
     top: -5px;
-    left:15%;
-    right:15%;
+    //left:15%;
+    //right:15%;
     z-index: 5;
     background-color: transparent;
     //padding: 0px;
     //border: 1px solid #999;
     text-align: center;
     line-height: 30px;
-    padding-left: 10px;
+    //padding-left: 10px;
   }
   .floatButton{
     position: absolute;
@@ -27,8 +28,14 @@ page-homepage {
 
   .searchBars{
     background-color:#ffffff;
-    padding-left: 10%;
+    //padding-left: 10%;
     margin: 0px;
+  }
+
+  ion-searchbar{
+    width: 108%;
+    margin: 0;
+    padding: 0;
   }
 
   .searchBtn{
